--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#/book/add">Add Book</a>
+                <a class="nav-link" href="#!/books/add">Add Book</a>
             </li>
         </ul>
     </div>
